--- a/package.json
+++ b/package.json
@@ -3,12 +3,34 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@testing-library/jest-dom": "^5.15.0",
+    "@apollo/client": "^3.4.10",
+    "@material-ui/core": "^4.12.1",
+    "@material-ui/icons": "^4.11.2",
+    "@material-ui/lab": "^4.0.0-alpha.60",
+    "@testing-library/jest-dom": "^5.14.1",
     "@testing-library/react": "^11.2.7",
     "@testing-library/user-event": "^12.8.3",
+    "apollo-link": "^1.2.14",
+    "apollo-link-http": "^1.5.17",
+    "apollo-link-rest": "^0.8.0-beta.0",
+    "apollo-link-retry": "^2.2.16",
+    "firebase": "^8.9.0",
+    "glob-parent": "^6.0.1",
+    "graphql": "^15.5.2",
+    "graphql-anywhere": "^4.1.0",
+    "qs": "^6.10.1",
     "react": "^17.0.2",
+    "react-adopt": "^0.6.0",
+    "react-chrono": "^1.11.0",
+    "react-countup": "^5.2.0",
     "react-dom": "^17.0.2",
-    "react-scripts": "4.0.3",
+    "react-latex": "^2.0.0",
+    "react-latex-next": "^2.1.0",
+    "react-markdown": "^7.0.1",
+    "react-rounded-image": "^2.0.13",
+    "react-scripts": "^4.0.3",
+    "recharts": "^2.1.2",
+    "remark-math": "^5.1.0",
     "web-vitals": "^1.1.2"
   },
   "scripts": {
@@ -26,7 +48,6 @@
   "browserslist": {
     "production": [
       ">0.2%",
-      "not dead",
       "not op_mini all"
     ],
     "development": [
