Adding router and code cleanup

--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "glob-parent": "^6.0.1",
     "graphql": "^15.5.2",
     "graphql-anywhere": "^4.1.0",
+    "history": "^5.1.0",
     "qs": "^6.10.1",
     "react": "^17.0.2",
     "react-adopt": "^0.6.0",
@@ -29,6 +30,7 @@
     "react-latex-next": "^2.1.0",
     "react-markdown": "^7.0.1",
     "react-rounded-image": "^2.0.13",
+    "react-router-dom": "^6.1.1",
     "react-scripts": "^4.0.3",
     "recharts": "^2.1.2",
     "remark-math": "^5.1.0",
