--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "@material-ui/core": "^4.12.1",
     "@material-ui/icons": "^4.11.2",
     "@material-ui/lab": "^4.0.0-alpha.60",
-    "@mui/icons-material": "^5.1.1",
+    "@mui/icons-material": "^5.6.1",
     "@mui/styles": "^5.2.3",
     "@testing-library/jest-dom": "^5.14.1",
     "@testing-library/react": "^11.2.7",
@@ -27,6 +27,7 @@
     "react-adopt": "^0.6.0",
     "react-chrono": "^1.11.0",
     "react-countup": "^5.2.0",
+    "react-device-detect": "^2.2.2",
     "react-dom": "^17.0.2",
     "react-latex": "^2.0.0",
     "react-latex-next": "^2.1.0",
