--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "apollo-link-http": "^1.5.17",
     "apollo-link-rest": "^0.8.0-beta.0",
     "apollo-link-retry": "^2.2.16",
+    "ethers": "^5.6.2",
     "firebase": "^8.10.0",
     "glob-parent": "^6.0.1",
     "graphql": "^15.5.2",
