--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "react-scripts": "^4.0.3",
     "recharts": "^2.1.2",
     "remark-math": "^5.1.0",
+    "universal-cookie": "^4.0.4",
     "web-vitals": "^1.1.2"
   },
   "scripts": {
