Investment Price Impact tooling
Includes 1. calculation of price impact from multi-token & disproportional investments, both custom and with pool selector. 2. Data table of spot and effective prices for single asset deposits, with linear and effective quantities out of BPT. 3. Graphical representation of single asset deposit to show price impact and decoupling of linear and effective pricing.

--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "react-rounded-image": "^2.0.13",
     "react-router-dom": "^6.1.1",
     "react-scripts": "^4.0.3",
+    "react-toggle-slider": "^0.4.0",
     "recharts": "^2.1.2",
     "remark-math": "^5.1.0",
     "universal-cookie": "^4.0.4",
