--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "react": "^17.0.2",
     "react-adopt": "^0.6.0",
     "react-chrono": "^1.11.0",
+    "react-cookie": "^4.1.1",
     "react-countup": "^5.2.0",
     "react-device-detect": "^2.2.2",
     "react-dom": "^17.0.2",
